# template-cpp-executable

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: automated-unit-testing.yaml
src/: CMakeLists.txt
tests/: CMakeLists.txt  hello_test.cpp
